--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.gz	filter=lfs diff=lfs merge=lfs -text
 *.jar	filter=lfs diff=lfs merge=lfs -text
 *.pdf	filter=lfs diff=lfs merge=lfs -text
+tutorials/native/python.tgz.bin filter=lfs diff=lfs merge=lfs -text
