--- a/.lfsconfig
+++ b/.lfsconfig
@@ -1,2 +1,3 @@
 [lfs]
-  url = https://gitlab.iscpif.fr/openmole/market.git/info/lfs
+  #url = https://gitlab.iscpif.fr/openmole/market.git/info/lfs
+  url = ssh://git@gitlab.iscpif.fr:20022/openmole/market.git
