Revert "Use ssh for lfs.
This reverts commit 07f8102261c58b57fc101a39201a515aea10843b.

--- a/.lfsconfig
+++ b/.lfsconfig
@@ -1,3 +1,2 @@
 [lfs]
-  #url = https://gitlab.iscpif.fr/openmole/market.git/info/lfs
-  url = ssh://git@gitlab.iscpif.fr:20022/openmole/market.git
+  url = https://gitlab.iscpif.fr/openmole/market.git/info/lfs
