--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *.jar	filter=lfs diff=lfs merge=lfs -text
 *.pdf	filter=lfs diff=lfs merge=lfs -text
 tutorials/native/python.tgz.bin filter=lfs diff=lfs merge=lfs -text
+*.nls filter=lfs diff=lfs merge=lfs -text
