--- a/.lfsconfig
+++ b/.lfsconfig
@@ -1,2 +1,2 @@
 [lfs]
-  url = https://gitlab.iscpif.fr/openmole/market.git/info/lfs
+  url = https://gitlab.openmole.org/openmole/market.git/info/lfs
